# obs-gnome-screencast

./: .gitlab-ci.yml  Dockerfile  README.md  cinnamon-muffin-screencast.c  gnome-mutter-screencast.c  gnome-screencast.c  meson.build
